@@ -23,9 +23,10 @@ import org.jkiss.dbeaver.Log;
 import org.jkiss.dbeaver.model.connection.DBPDriverLibrary;
 import org.jkiss.dbeaver.model.runtime.DBRProgressMonitor;
 import org.jkiss.utils.ArrayUtils;
+import org.jkiss.utils.CommonUtils;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.nio.file.Path;
 
 /**
  * DriverLibraryRemote
@@ -40,6 +41,7 @@ public class DriverLibraryRemote extends DriverLibraryLocal {
         "https",
         "ftp",
     };
+    private String customLocalFileName;
 
     public DriverLibraryRemote(@NotNull  DriverDescriptor driver, @NotNull FileType type, @NotNull String url) {
         super(driver, type, url);
@@ -67,16 +69,21 @@ public class DriverLibraryRemote extends DriverLibraryLocal {
 
     @Override
     protected String getLocalFilePath() {
-        try {
-            final String path = new URL(getPath()).getPath();
-            if (path.startsWith("/")) {
-                return DOWNLOAD_DIR + path;
-            } else {
-                return DOWNLOAD_DIR + "/" + path;
+        String finalPath = URI.create(getPath()).getPath();
+        String customLocalFileName = getCustomLocalFileName();
+        if (!CommonUtils.isEmpty(customLocalFileName)) {
+            // Replace local file name with custom
+            // Sometimes remote URL is dummy (e.g. driver.zip or some random UUID) and here we can rewrite it
+            Path folder = Path.of(finalPath).getParent();
+            if (folder != null) {
+                finalPath = folder.resolve(customLocalFileName).toString();
             }
-        } catch (MalformedURLException e) {
-            log.error(e);
-            return getPath();
+        }
+
+        if (finalPath.startsWith("/")) {
+            return DOWNLOAD_DIR + finalPath;
+        } else {
+            return DOWNLOAD_DIR + "/" + finalPath;
         }
     }
 
@@ -86,6 +93,14 @@ public class DriverLibraryRemote extends DriverLibraryLocal {
         return getPath();
     }
 
+    @Nullable
+    public String getCustomLocalFileName() {
+        return customLocalFileName;
+    }
+
+    public void setCustomLocalFileName(@Nullable String customLocalFileName) {
+        this.customLocalFileName = customLocalFileName;
+    }
 
     public static boolean supportsURL(String url) {
         int pos = url.indexOf(":/");
